<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="@dimen/settings_image_size"
        android:layout_height="@dimen/settings_image_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_top_margin"
        android:src="@drawable/default_profile_picture" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_display_name_top_margin"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/settings_display_name_size" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="@dimen/settings_status_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_status_top_margin"
        android:text="@string/default_status"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/settings_status_size" />

    <Button
        android:id="@+id/settings_change_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_change_status"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/settings_btn_bottom_margin"
        android:paddingStart="@dimen/settings_btn_padding"
        android:paddingEnd="@dimen/settings_btn_padding"
        android:background="@color/button_profile_color"
        android:text="@string/btn_profile_picture"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/settings_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/settings_bottom_margin"
        android:background="@color/button_profile_color"
        android:text="@string/btn_status"
        android:textColor="@android:color/white"
        android:layout_alignStart="@+id/settings_change_profile_picture"
        android:layout_alignEnd="@+id/settings_change_profile_picture" />

</RelativeLayout>
