<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_layout_top_margin"
        android:layout_marginStart="@dimen/register_text_margin"
        android:layout_marginEnd="@dimen/register_text_margin" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_name"
            android:textColor="@color/register_text_color"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email"
        android:layout_below="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_text_margin"
        android:layout_marginStart="@dimen/register_text_margin"
        android:layout_marginEnd="@dimen/register_text_margin" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_email"
            android:textColor="@color/register_text_color"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password"
        android:layout_below="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_text_margin"
        android:layout_marginStart="@dimen/register_text_margin"
        android:layout_marginEnd="@dimen/register_text_margin" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_password"
            android:textColor="@color/register_text_color"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone"
        android:layout_below="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_text_margin"
        android:layout_marginStart="@dimen/register_text_margin"
        android:layout_marginEnd="@dimen/register_text_margin" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_phone"
            android:textColor="@color/register_text_color"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_sign_up_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/register_button_margin"
        android:layout_marginEnd="@dimen/register_button_margin"
        android:background="@drawable/round_button_blue"
        android:padding="@dimen/register_btn_padding"
        android:text="@string/register_create_account"
        android:textColor="@android:color/white" />

</RelativeLayout>
